@@ -1,4 +1,4 @@
 #! /bin/bash
 
 git status
-java -Djava.ext.dirs=./lib org.liuyehcf.markdown.format.HexoFormatter . $1
+java -jar lib/markdown-format.jar . $1
